Closed
Bug 360244
Opened 18 years ago
Closed 18 years ago
Implement gfxPlatformMac::GetFontList to get list of fonts on the mac
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: hwaara, Assigned: vlad)
References
Details
Attachments
(1 file)
4.76 KB,
patch
|
pavlov
:
review+
|
Details | Diff | Splinter Review |
Mac OS X 10.4.8, Firefox trunk.
Open the Preferences, and click the Content category. See the font menu is empty, with empty items.
For screenshot, see attachment 245201 [details].
Reporter | ||
Comment 1•18 years ago
|
||
*** Bug 360238 has been marked as a duplicate of this bug. ***
Comment 2•18 years ago
|
||
This sounds like a duplicate of bug 346831. Has bug 347421 regressed?
Reporter | ||
Comment 3•18 years ago
|
||
*** Bug 361244 has been marked as a duplicate of this bug. ***
This is a problem with thebes font code.
Component: Preferences → GFX: Thebes
Product: Firefox → Core
Assignee | ||
Comment 5•18 years ago
|
||
gfxPlatformMac::GetFontList needs to be implemented here. I'll take a look tomorrow or wednesday, hopefully.
Flags: blocking1.9+
Summary: Only empty items in font menu, in Content preference panel → Implement gfxPlatformMac::GetFontList to get list of fonts on the mac
Updated•18 years ago
|
QA Contact: preferences → thebes
Comment 6•18 years ago
|
||
Vlad:
Please review the patch of bug 352174 before this.
Because we should implement |gfxPlatform::ResolveFontName| at same time.
Assignee | ||
Comment 7•18 years ago
|
||
Implement GetFontList on the mac. Additional problem is that the chosen font doesn't seem to actually /do/ anything, but that's for another bug. Also, non-latin fonts aren't separated out like they are on other platforms.
Assignee | ||
Comment 8•18 years ago
|
||
(ignore the junk localstore.rdf changes)
Comment 9•18 years ago
|
||
Comment on attachment 246195 [details] [diff] [review]
implement GetFontList
ok.. file another bug for the langgroup and generic family stuff.
Attachment #246195 -
Flags: review?(pavlov) → review+
Assignee | ||
Updated•18 years ago
|
Comment 10•18 years ago
|
||
(In reply to comment #7)
> Additional problem is that the chosen font
> doesn't seem to actually /do/ anything, but that's for another bug. Also,
> non-latin fonts aren't separated out like they are on other platforms.
Would this be the reason that the wrong font is used in Bugzilla pages now that Thebes is implemented?
(In reply to comment #9)
> ok.. file another bug for the langgroup and generic family stuff.
Was a bug filed? I couldn't find anything, but maybe I missed it. I was going to file something for the effects I'm seeing, but I figured it was better left for someone who knew the technical details. :)
Assignee | ||
Comment 11•18 years ago
|
||
Yes, bug 347421 (marked as blocking this).
Comment 12•18 years ago
|
||
By bug 347421 ("xforms is part of the default build"), do you mean bug 361446 ("gfxPlatformMac::GetFontList needs to use langGroup/generic family arguments")?
Assignee | ||
Comment 13•18 years ago
|
||
Yes. Yes I do.
You need to log in
before you can comment on or make changes to this bug.
Description
•